font changes and fix for votin

--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+@font-face {
+  font-family: 'Press Start 2P';
+  src: local('Press Start 2P'), url('./assets/fonts/PressStart2P-Regular.ttf') format('truetype');
+}
